﻿Version [Version Number] ([Friendly Version Number]) [Release Date]

Version vNext
	General description:

	Code Changes:
		-[Extensions] RegisterOpenGenericDecorator extension methods now allow registering non-generic
		 implementations, as long as they implement the supplied open generic service type.

	Bug fixes:


Version 1.4.0.12049 (v1.4.0 RTM) 2012-02-18
	General description:

	Code Changes:
		-[Core] The internal Container.GetInitializerFor<T> method has been made public and renamed to
		 GetInitializer<T>. This enables certain specialized scenarios. The main (external) consumer of
		 this method is the RegisterManyForOpenGeneric method of the Extensions project.
		-[Extensions] Decorators created using the RegisterManyForOpenGeneric extension methods now get
		 initialized with any registered initializers (if any).

	Bug fixes:
		-[Core] The exception message that was thrown in case the delegate of a type could not be compiled, 
		 incorrectly described the UnregisteredTypeEventArgs.Register method, which was confusing.


Version 1.3.1.11358 (v1.3.1 RTM) 2011-12-23
	General description:
		RegisterOpenGenericDecorator extension methods added to the SimpleInjector.Extensions project.

	Code Changes:
		-[Extensions] New RegisterManyForOpenGeneric overloads added.
		-[Extensions] RegisterOpenGenericDecorator extension methods have been added.


Version 1.3.0.11343 (v1.3 RTM) 2011-12-09
	General description:
		This release adds a few features and fixes two bugs in the core library. The most important new
		feature is the addition of a ExpresionBuilt event, which allows users to alter the way types are 
		created by the container. This enables scenarios as interception, context based injection, and 
		wrapping types with decorators.
			
	Code Changes:
		-[Core] A new overload to the Container.GetRegistration() method has been added. This overload allows
		 users to signal whether the method should throw or return null (what the original overload does).